--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=0,minimal-ui,viewport-fit=cover">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>vuedemo</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but vuedemo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-	<div id="app"></div>
-	<script crossorigin="anonymous" integrity="sha384-rsgFiCMVPm6JoTjWrzWVZrjuRhSId6msoppIf/HR9d58qOrCNAWTsQAQ3REeLi7g"
-		src="https://lib.baomitu.com/vue/2.6.6/vue.min.js"></script>
-	<script crossorigin="anonymous" integrity="sha384-g4QZ3CgAtAdAvMxrn/IlcxAxZxqs+hDd0fcj0GMX8Qf3IfjXu0VBHY8d3sq0UCRV"
-		src="https://lib.baomitu.com/vue-router/3.0.1/vue-router.min.js"></script>
-	<script crossorigin="anonymous" integrity="sha384-8yvWnsU6LFumnVSXB10xSFewFVCar2ZbXD7W1kIojnBX+EJgZS0rVrSEBtTZTKXN"
-		src="https://lib.baomitu.com/vuex/3.0.1/vuex.min.js"></script>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!-- DNS预解析 -->
+  <link rel="dns-prefetch" href="//lib.baomitu.com" />
+  <meta name="viewport"
+    content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=0,minimal-ui,viewport-fit=cover">
+    
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <!-- 使用CDN加速的CSS文件，配置在vue.config.js下 -->
+  <% for (var i in htmlWebpackPlugin.options.cdn&&htmlWebpackPlugin.options.cdn.css) { %>
+  <link href="<%= htmlWebpackPlugin.options.cdn.css[i] %>" rel="preload" as="style">
+  <link href="<%= htmlWebpackPlugin.options.cdn.css[i] %>" rel="stylesheet">
+  <% } %>
+
+  <title>vuedemo</title>
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but vuedemo doesn't work properly without JavaScript enabled. Please enable it to
+      continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- 使用CDN加速的JS文件，配置在vue.config.js下 -->
+  <% for (var i in htmlWebpackPlugin.options.cdn&&htmlWebpackPlugin.options.cdn.js) { %>
+  <script src="<%= htmlWebpackPlugin.options.cdn.js[i] %>"></script>
+  <% } %>
+
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
